Fix spacing in task detail info

--- a/src/pages/Admin/Home/Dashboard/TaskDetail/Company/CompanyDetailInfo/Actions/styles.module.scss
+++ b/src/pages/Admin/Home/Dashboard/TaskDetail/Company/CompanyDetailInfo/Actions/styles.module.scss
@@ -6,6 +6,6 @@
 
   button {
     height: 15px;
-    margin: 0 0 $spacing-m $spacing-xxl;
+    margin: 0 0 0 $spacing-m;
   }
 }
