--- a/src/pages/Admin/Home/Dashboard/TaskDetail/Company/CompanyDetailInfo/MainTitle/styles.module.scss
+++ b/src/pages/Admin/Home/Dashboard/TaskDetail/Company/CompanyDetailInfo/MainTitle/styles.module.scss
@@ -10,7 +10,7 @@
 .header {
   align-items: center;
   display: block;
-  margin: $spacing-l $spacing-xxl 0;
+  margin: $spacing-xl $spacing-l 0;
 }
 
 .main {
