--- a/src/pages/Applicant/Companies/styles.module.scss
+++ b/src/pages/Applicant/Companies/styles.module.scss
@@ -30,7 +30,7 @@
     flex-direction: column;
 
     .companyLogo {
-      margin-bottom: $fontSize-s;
+      margin-bottom: $spacing-m;
     }
   }
 }
